--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         html {
             line-height: 1.15;
-            -webkit-text-size-adjust: 100%
+            -webkit-text-size-adjust: 100z
         }
 
         body {
@@ -181,6 +181,8 @@
             position: absolute;
             height: 100%;
             width: 100%;
+            background-image: linear-gradient(to top,#660000,#990000,#cc0000,rgb(253, 33, 33), #ff6666
+,pink , #ffe6e6,snow,#ffe6e6,pink,#ff6666,rgb(253, 33, 33),#cc0000,#990000,#660000);;
         }
 
         .middle {
@@ -817,7 +819,7 @@
                                 </g>
                                 <path fill="#BCC49A" d="M173.458,179.502c-4.962,0-9-4.039-9-9v-68.125c0-4.961,4.038-9,9-9h254.966c4.963,0,9,4.039,9,9v68.125
                     					c0,4.961-4.037,9-9,9H173.458z" />
-                                <text id="display" text-anchor="end" transform="matrix(1 0 0 1 420 164)" font-family="'Digital-7'" font-size="50">0</text>
+                                <text id="display" text-anchor="end" transform="matrix(1 0 0 1 420 164)" font-family="'Digital-7'" font-size="50"></text>
                                 <text id="hora" text-anchor="start" transform="matrix(1 0 0 1 175 113)" font-family="'Digital-7'" font-size="17.0079"></text>
                                 <text id="data" text-anchor="end" transform="matrix(1 0 0 1 420 113)" font-family="'Digital-7'" font-size="17.0079"></text>
                                 <path fill="#E0E0E0" d="M428.424,91.385H173.458c-6.616,0-12,5.385-12,12v68.125c0,6.615,5.384,12,12,12h254.966
@@ -1809,6 +1811,9 @@
 
         </div>
     </div>
+    <script src="scripts/Controller/CalcController.js"></script>
+    <script src="scripts/Calculator.js"></script>
+
 </body>
 
 </html>
